docs: make readmes better
